log
Thu 25 Apr 2024 09:19:05 PM UTC: 
 tests:  0|6
total_score: 0/70
87ce2c0
Thu 25 Apr 2024 09:26:05 PM UTC: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
e19cb6d
Thu 25 Apr 2024 09:26:27 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
80f35c9
Thu 25 Apr 2024 09:31:45 PM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:30: error: expected ‘)’ before ‘enlarge’
   45 |   if(map->size==map->capacity enlarge(map);
      |     ~                        ^~~~~~~~
      |                              )
hashmap.c:56:1: error: expected expression before ‘}’ token
   56 | }
      | ^
Compilation failed
f3bd1d1
Thu 25 Apr 2024 09:32:19 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f07b2e9
Thu 25 Apr 2024 09:34:52 PM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
1671b62
Thu 25 Apr 2024 09:38:24 PM UTC: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:94:39: error: ‘value’ undeclared (first use in this function)
   94 |         map->buckets[posicion]->value=value;
      |                                       ^~~~~
hashmap.c:94:39: note: each undeclared identifier is reported only once for each function it appears in
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a316db6
Thu 25 Apr 2024 09:38:49 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
test.c: In function ‘searchMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
586810b
Thu 25 Apr 2024 09:39:15 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|3
total_score: 40/70
58661a7
Thu 25 Apr 2024 09:41:06 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
62e1a65
Thu 25 Apr 2024 09:41:40 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  8|3
total_score: 40/70
b394301
Thu 25 Apr 2024 09:44:03 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:77:26: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   77 |   if(map == NULL) return NULL;
      |                          ^~~~
hashmap.c:75:6: note: declared here
   75 | void eraseMap(HashMap * map,  char * key)
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b9e09aa
Thu 25 Apr 2024 09:46:06 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
4eee36c
Thu 25 Apr 2024 09:49:12 PM UTC: 
 hashmap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  12|2
total_score: 50/70
3f2e1ed
Thu 25 Apr 2024 09:49:59 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
da4c64c
Thu 25 Apr 2024 09:50:24 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
fdda208
